add sqlite and sf changes

--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -50,6 +50,8 @@ It is Feb 11, 2026 at 20:39 and it has now been four weeks, here are the new ins
 
 13. Where I lived before, people always ask and think about the weather i.e. they know what the forecast is for the next week. Here, nobody talks about the weather because it's always good. So it doesn't matter.
 
+14. It is very compelling to what extent the people who do not ask for permission go farther.
+
 ---
 
 SF vocab I have learnt so far:
