all my homies hate remnote

--- a/_posts/blog/2025-12-04-tools.md
+++ b/_posts/blog/2025-12-04-tools.md
@@ -7,11 +7,14 @@ categories: productivity
 
 # Tools I use
 
+## IDE
+
+- Cursor
+- claude and codex for code
+
 ## Software
 
 - WakaTime
-- Cursor
-- Codex
 - yt-dlp
 - zsh-syntax-highlighting
 - uv tool
@@ -19,11 +22,14 @@ categories: productivity
   - [fr8](https://pypi.org/project/fr8/)
   - [twtr](https://pypi.org/project/twtr/)
 
+## PKM
+
+- Obsidian
+
 ## Apps
 
 - Strava
 - Focusmate
-- RemNote
 - Raycast
 - Vorta
 - superwhisper
