--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -5,6 +5,10 @@ date: 2026-02-12
 categories: machine_learning
 ---
 
+WIP
+
 - The documentation in the repo became enormous.
 - Adding more strict observability because probably a lot of errors were due to the rate limit being hit mid work and then just not being able to like put then essentially at that point there was like only half finished work pushed.
 - Record which agent is pushed and token usage more directly
+
+https://cursor.com/blog/scaling-agents
