sqlite and add one change to regex

--- a/_posts/blog/2026-02-10-regex.md
+++ b/_posts/blog/2026-02-10-regex.md
@@ -121,9 +121,9 @@ I'm thinking of having specialized agent roles as well. Here is what Carlini did
 - Rate-limit-only sessions: 1,259
 - Non-rate-limited sessions: 14
 
-### Model usage snapshot
+### Usage
 
-- Tokens: In 9.4k / Out 6.5k
+- Tokens: In 9.4k / Out 6.5k (I realize now that this is completely erroneous, but this is what Claude Code said the token usage was. Their token tracker is not working.)
 - Used ~30% of my Claude Pro weekly limit
 
 ### Notes on the Anthropic approach
