add code blocks

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -35,7 +35,7 @@ Treat software engineering like distributed systems, and force coordination with
 ## workflow
 
 1. **bootstrap phase**: one Claude run generates baseline docs, crate skeleton, and test harness.
-    ├── Cargo.toml         // crate manifest
+    ```├── Cargo.toml         // crate manifest
     ├── DESIGN.md          // architecture design notes
     ├── PROGRESS.md        // test & build progress
     ├── README.md          // project overview
@@ -44,7 +44,7 @@ Treat software engineering like distributed systems, and force coordination with
     ├── current_tasks      // lock files
     ├── notes              // inter-agent notes
     ├── target             // build artifacts
-    └── test.sh            // test harness script
+    └── test.sh            // test harness script```
 2. **worker phase**: six workers loop forever (`2x Claude`, `2x Codex`, `2x Gemini`).
 
 the loop is simple:
