--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -9,33 +9,31 @@ categories: machine_learning
 
 I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://github.com/kiankyars/sqlite) in Rust.
 
-- **18,849** lines of code
-- parser, planner, volcano executor, pager, b+trees, wal, recovery, joins, aggregates, indexing, transaction semantics, grouped aggregates, and stats-aware planning all implemented
-- 282 unit tests, all passing
+- **18,849** lines of code.
+- Parser, planner, volcano executor, pager, b+trees, wal, recovery, joins, aggregates, indexing, transaction semantics, grouped aggregates, and stats-aware planning all implemented.
+- 282 unit tests, all passing.
 
 ## background
 
 Treat software engineering like distributed systems, and force coordination with: git, lock files, tests, and merge discipline.
 
-## setup
+## harness
 
-1. A remote the agents could continuously pull/push: `git@github.com:kiankyars/sqlite.git`
-2. A launcher that first runs a bootstrap agent, then starts worker loops in detached `screen` sessions
-3. Per-agent clones workspaces (`workspace-<id>`) with logs
-4. The following harness:
-
-- `AGENT_PROMPT.md`       // main agent task prompt
-- `BOOTSTRAP_PROMPT.md`   // bootstrap (initialization) prompt
-- `COALESCE_PROMPT.md`    // deduplication prompt for coalescer agent
-- `launch_agents.sh`      // launches all agents and sets up isolated workspaces
-- `agent_loop.sh`         // per-agent loop/worker script
-- `restart_agents.sh`     // restarts agents
-- `coalesce.sh`           // invokes the coalescing script
+```text
+├── AGENT_PROMPT.md       // main agent task prompt
+├── BOOTSTRAP_PROMPT.md   // bootstrap (initialization) prompt
+├── COALESCE_PROMPT.md    // deduplication prompt for coalescer agent
+├── launch_agents.sh      // launches all agents and sets up isolated workspaces
+├── agent_loop.sh         // per-agent loop/worker script
+├── restart_agents.sh     // restarts agents
+└── coalesce.sh           // invokes the coalescing script
+```
 
 ## workflow
 
 1. **bootstrap phase**: one Claude run generates baseline docs, crate skeleton, and test harness.
-    ```├── Cargo.toml         // crate manifest
+    ```text
+    ├── Cargo.toml         // crate manifest
     ├── DESIGN.md          // architecture design notes
     ├── PROGRESS.md        // test & build progress
     ├── README.md          // project overview
@@ -44,30 +42,31 @@ Treat software engineering like distributed systems, and force coordination with
     ├── current_tasks      // lock files
     ├── notes              // inter-agent notes
     ├── target             // build artifacts
-    └── test.sh            // test harness script```
+    └── test.sh            // test harness script
+    ```
 2. **worker phase**: six workers loop forever (`2x Claude`, `2x Codex`, `2x Gemini`).
 
-the loop is simple:
+The loop is simple:
 
-1. each agent pulls latest main
-2. claims one scoped task
-3. implements + tests against sqlite3 as oracle
-4. updates shared progress/notes
-5. push
+1. Each agent pulls latest main.
+2. Claims one scoped task.
+3. Implements + tests against sqlite3 as oracle.
+4. Updates shared progress/notes.
+5. Push.
 
 ## analysis
 
 ### coordination tax
 
-- **84 / 154 commits (54.5%)** were lock/claim/stale-lock/release coordination
-- demonstrates parallel-agent throughput depends heavily on lock hygiene and stale-lock cleanup discipline
+- **84 / 154 commits (54.5%)** were lock/claim/stale-lock/release coordination.
+- Demonstrates parallel-agent throughput depends heavily on lock hygiene and stale-lock cleanup discipline.
 
 ### what helped most
 
 Two things looked decisive:
 
-- **oracle-style validation + high test cadence** (`cargo test ...` and `./test.sh --fast`/full runs captured in `PROGRESS.md`)
-- **strong module boundaries** (`parser -> planner -> executor <-> storage`) so agents could work on orthogonal slices with fewer merge collisions
+- **oracle-style validation + high test cadence** (`cargo test ...` and `./test.sh --fast`/full runs captured in `PROGRESS.md`).
+- **strong module boundaries** (`parser -> planner -> executor <-> storage`) so agents could work on orthogonal slices with fewer merge collisions.
 
 ### redundancy
 
@@ -75,10 +74,10 @@ I implemented a coalescer with gemini to clean duplication/drift, since that is 
 
 ### takeaways
 
-- parallelism is great, but only with strict task boundaries.
-- shared state docs (PROGRESS.md, design notes) are part of the runtime, not “documentation.”
-- tests are the anti-entropy force.
-- give agents a narrow interface, a common truth source, and fast feedback, and you get compounding throughput on real systems code.
+- Parallelism is great, but only with strict task boundaries.
+- Shared state docs (PROGRESS.md, design notes) are part of the runtime, not “documentation.”
+- Tests are the anti-entropy force.
+- Give agents a narrow interface, a common truth source, and fast feedback, and you get compounding throughput on real systems code.
 
 ## replication
 
@@ -107,13 +106,13 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 
 ## limitations
 
-- The documentation in the repo became enormous, `PROGRESS.md` became 490 lines and look at the sheer amount of [notes](https://github.com/kiankyars/sqlite/tree/main/notes); all this to say that the coalesce agent must be run as often as the other agents
-- There isn't a great way to record token usage since each platform uses a different format, so I don't have a grasp on which agent pulled the most weight
+- The documentation in the repo became enormous, `PROGRESS.md` became 490 lines and look at the sheer amount of [notes](https://github.com/kiankyars/sqlite/tree/main/notes); all this to say that the coalesce agent must be run as often as the other agents.
+- There isn't a great way to record token usage since each platform uses a different format, so I don't have a grasp on which agent pulled the most weight.
 
 ## future work
 
 - Track "substantive run rate", since many are rate-limited/nothing happened.
-- Only Claude adds itself as a co-author to each commit and I did not do that for Codex and Gemini, so I need to add a commit message for Gemini and Codex
+- Only Claude adds itself as a co-author to each commit and I did not do that for Codex and Gemini, so I need to add a commit message for Gemini and Codex.
 - Adding more strict observability because probably a lot of errors were due to the rate limit being hit mid work and then just not being able to like put then essentially at that point there was like only half finished work pushed.
 
 ## inspiration
@@ -123,53 +122,39 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 
 ## appendix
 
-### engine scope
-
-- SQL parser/tokenizer/AST
-- Planner with physical access-path selection (`TableScan`, `IndexEq`, `IndexRange`, `IndexOr`, `IndexAnd`, composite prefix/range)
-- Volcano-style executor
-- Pager with buffer pool + LRU + dirty tracking
-- B+tree tables and secondary indexes (single + multi-column, including `UNIQUE`)
-- DML/DDL: `CREATE TABLE`, `INSERT`, `SELECT`, `UPDATE`, `DELETE`, `DROP TABLE`, `DROP INDEX`
-- Query features: `ORDER BY`, `LIMIT/OFFSET`, aggregates, `GROUP BY`, `HAVING`
-- Join support: `INNER`, `CROSS`, `LEFT`, `RIGHT`, `FULL OUTER`
-- WAL + commit/checkpoint/recovery
-- SQL transaction control: `BEGIN` / `COMMIT` / `ROLLBACK`
-- Scalar SQL functions and corrected LIKE semantics
-
 ### milestone commits
 
 - **Foundation**
-  - Bootstrap workspace, docs, harness (`16879bd`)
-  - Tokenizer, SQL parser, AST (`15586d7`)
-  - Pager and B+tree foundations/baseline (`3f8b2a3`, `8698bd8`)
+  - Bootstrap workspace, docs, harness (`16879bd`).
+  - Tokenizer, SQL parser, AST (`15586d7`).
+  - Pager and B+tree foundations/baseline (`3f8b2a3`, `8698bd8`).
 - **Core SQL path**
-  - End-to-end CRUD operations and secondary indexes (`9070529`, `58bb7b1`, `39d5147`)
-  - Volcano-style executor (`aedda27`)
+  - End-to-end CRUD operations and secondary indexes (`9070529`, `58bb7b1`, `39d5147`).
+  - Volcano-style executor (`aedda27`).
 - **Durability**
-  - WAL write path and commit (`b48518c`)
-  - Checkpoint and recovery (`6137ec0`)
-  - Transaction SQL (`342c147`)
-  - Dirty-eviction transactional correctness (`7805ee6`)
+  - WAL write path and commit (`b48518c`).
+  - Checkpoint and recovery (`6137ec0`).
+  - Transaction SQL (`342c147`).
+  - Dirty-eviction transactional correctness (`7805ee6`).
 - **Planner and Executor Growth**
-  - Physical access path selection, range/OR/AND/multi-column/stats planner evolution (`aa24fb3`, `0b225c8`, `2b81d85`, `c60e580`, `0da32f2`, `8b0b5d7`)
-  - Index equality/range (`600ab8f`, `aa24fb3`)
-  - Multi-column equality, prefix, and range (`b147f1a`, `5e75b46`)
-  - Cost heuristics, stats model, persisted stats (`c099b7c`, `c60e580`, `0da32f2`, `8b0b5d7`, `e96ad80`)
+  - Physical access path selection, range/OR/AND/multi-column/stats planner evolution (`aa24fb3`, `0b225c8`, `2b81d85`, `c60e580`, `0da32f2`, `8b0b5d7`).
+  - Index equality/range (`600ab8f`, `aa24fb3`).
+  - Multi-column equality, prefix, and range (`b147f1a`, `5e75b46`).
+  - Cost heuristics, stats model, persisted stats (`c099b7c`, `c60e580`, `0da32f2`, `8b0b5d7`, `e96ad80`).
 - **SQL Semantics**
-  - JOIN family and grouped join semantics, including full join family and grouped aggregates (`02805ef`, `bfb1a49`, `3439033`, `2ad8d61`, `fafb387`, `8d965d5`)
-  - Scalar SQL functions and join index probes (`85fbd7a`, `b9a39d1`)
-  - LIKE semantics correctness fix (`ac59ad5`)
+  - JOIN family and grouped join semantics, including full join family and grouped aggregates (`02805ef`, `bfb1a49`, `3439033`, `2ad8d61`, `fafb387`, `8d965d5`).
+  - Scalar SQL functions and join index probes (`85fbd7a`, `b9a39d1`).
+  - LIKE semantics correctness fix (`ac59ad5`).
 - **Coalesce/Cleanup**
-  - Coalesce cleanup and deduplication (`1a14838`)
+  - Coalesce cleanup and deduplication (`1a14838`).
 
 ### code size snapshot
 
-- Counted files (`.rs` + `.sh`): **15**
-- Rust: **14 files / 18,650 lines**
-- Shell: **1 file / 199 lines**
-- Approx. non-blank, non-comment lines: **16,294** (Rust ~16,155 + Shell ~139)
-- 154 commits between **2026-02-10** and **2026-02-12**
+- Counted files (`.rs` + `.sh`): **15**.
+- Rust: **14 files / 18,650 lines**.
+- Shell: **1 file / 199 lines**.
+- Approx. non-blank, non-comment lines: **16,294** (Rust ~16,155 + Shell ~139).
+- 154 commits between **2026-02-10** and **2026-02-12**.
 
 ### usage
 
@@ -184,7 +169,7 @@ Gemini does not offer a way to monitor usage with their CLI. It's also not on a 
 
 ### disclaimer
 
-- codex wrote the first draft for this post
+- codex wrote the first draft for this post.
 
 ## citation
 
