remove milestone commits and add horizontal line breaks

--- a/_posts/blog/2026-02-12-sqlite.md
+++ b/_posts/blog/2026-02-12-sqlite.md
@@ -9,13 +9,17 @@ categories: machine_learning
 
 I tasked Claude, Codex, and Gemini to build a [SQLite-like engine](https://github.com/kiankyars/sqlite) in Rust.
 
-- **18,849** lines of code.
+- **~19k~** lines of code.
 - Parser, planner, volcano executor, pager, b+trees, wal, recovery, joins, aggregates, indexing, transaction semantics, grouped aggregates, and stats-aware planning all implemented.
 - 282 unit tests, all passing.
+
+---
 
 ## background
 
 Treat software engineering like distributed systems, and force coordination with: git, lock files, tests, and merge discipline.
+
+---
 
 ## harness
 
@@ -28,6 +32,8 @@ Treat software engineering like distributed systems, and force coordination with
 ├── restart_agents.sh     // restarts agents
 └── coalesce.sh           // invokes the coalescing script
 ```
+
+---
 
 ## workflow
 
@@ -54,6 +60,8 @@ The loop is simple:
 4. Updates shared progress/notes.
 5. Push.
 
+---
+
 ## analysis
 
 ### coordination tax
@@ -78,6 +86,8 @@ I implemented a coalescer with gemini to clean duplication/drift, since that is 
 - Shared state docs (PROGRESS.md, design notes) are part of the runtime, not “documentation.”
 - Tests are the anti-entropy force.
 - Give agents a narrow interface, a common truth source, and fast feedback, and you get compounding throughput on real systems code.
+
+---
 
 ## replication
 
@@ -104,10 +114,14 @@ coalesce agent:
 
 Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus `screen`, `git`, Rust toolchain, and `sqlite3`.
 
+---
+
 ## limitations
 
 - The documentation in the repo became enormous, `PROGRESS.md` became 490 lines and look at the sheer amount of [notes](https://github.com/kiankyars/sqlite/tree/main/notes); all this to say that the coalesce agent must be run as often as the other agents.
 - There isn't a great way to record token usage since each platform uses a different format, so I don't have a grasp on which agent pulled the most weight.
+
+---
 
 ## future work
 
@@ -115,46 +129,26 @@ Assumes you have the relevant CLIs installed (`claude`, `codex`, `gemini`), plus
 - Only Claude adds itself as a co-author to each commit and I did not do that for Codex and Gemini, so I need to add a commit message for Gemini and Codex.
 - Adding more strict observability because probably a lot of errors were due to the rate limit being hit mid work and then just not being able to like put then essentially at that point there was like only half finished work pushed.
 
+---
+
 ## inspiration
 
 - https://cursor.com/blog/scaling-agents
 - https://www.anthropic.com/engineering/building-c-compiler
 
+---
+
 ## appendix
-
-### milestone commits
-
-- **Foundation**
-  - Bootstrap workspace, docs, harness (`16879bd`).
-  - Tokenizer, SQL parser, AST (`15586d7`).
-  - Pager and B+tree foundations/baseline (`3f8b2a3`, `8698bd8`).
-- **Core SQL path**
-  - End-to-end CRUD operations and secondary indexes (`9070529`, `58bb7b1`, `39d5147`).
-  - Volcano-style executor (`aedda27`).
-- **Durability**
-  - WAL write path and commit (`b48518c`).
-  - Checkpoint and recovery (`6137ec0`).
-  - Transaction SQL (`342c147`).
-  - Dirty-eviction transactional correctness (`7805ee6`).
-- **Planner and Executor Growth**
-  - Physical access path selection, range/OR/AND/multi-column/stats planner evolution (`aa24fb3`, `0b225c8`, `2b81d85`, `c60e580`, `0da32f2`, `8b0b5d7`).
-  - Index equality/range (`600ab8f`, `aa24fb3`).
-  - Multi-column equality, prefix, and range (`b147f1a`, `5e75b46`).
-  - Cost heuristics, stats model, persisted stats (`c099b7c`, `c60e580`, `0da32f2`, `8b0b5d7`, `e96ad80`).
-- **SQL Semantics**
-  - JOIN family and grouped join semantics, including full join family and grouped aggregates (`02805ef`, `bfb1a49`, `3439033`, `2ad8d61`, `fafb387`, `8d965d5`).
-  - Scalar SQL functions and join index probes (`85fbd7a`, `b9a39d1`).
-  - LIKE semantics correctness fix (`ac59ad5`).
-- **Coalesce/Cleanup**
-  - Coalesce cleanup and deduplication (`1a14838`).
 
 ### code size snapshot
 
-- Counted files (`.rs` + `.sh`): **15**.
-- Rust: **14 files / 18,650 lines**.
-- Shell: **1 file / 199 lines**.
-- Approx. non-blank, non-comment lines: **16,294** (Rust ~16,155 + Shell ~139).
-- 154 commits between **2026-02-10** and **2026-02-12**.
+| Language | Files | Lines | Non-blank/Non-comment |
+| :--- | :--- | :--- | :--- |
+| **Rust** | 14 | 18,650 | ~16,155 |
+| **Shell** | 1 | 199 | ~139 |
+| **Total** | **15** | **18,849** | **~16,294** |
+
+*154 commits between 2026-02-10 and 2026-02-12.*
 
 ### usage
 
@@ -170,6 +164,8 @@ Gemini does not offer a way to monitor usage with their CLI. It's also not on a 
 ### disclaimer
 
 - codex wrote the first draft for this post.
+
+---
 
 ## citation
 
